# KALMAN_Filter

./: README.md  kalman.py  kalmanDummySim.py  micro_py_Implementation.py  rocket_dummy_flight.csv
bme280_kalman/: .gitignore  CMakeLists.txt  README.md  USERGUIDE.md
bme280_kalman/src/: bme280.c  bme280.h  kalman.c  kalman.h  main.c
